# companion-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  tauri-packaging.yml
apps/desktop/: .eslintrc.cjs  index.html  installer-preview.html  pack-studio-preview.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: README.md  desktop-linux.md
services/agent-runtime/: pyproject.toml  run_runtime.py
services/agent-runtime/app/: installer.py  main.py  marketplace.py  memory_manager.py  micro_utilities.py  model_catalog.py  personality_packs.py  preferences.py  runtime_logging.py  runtime_paths.py  stream_integration.py  voice_bridge.py
services/agent-runtime/app/api/: __init__.py
services/agent-runtime/app/chat/: __init__.py  providers.py  service.py
services/agent-runtime/app/core/: command_router.py
services/agent-runtime/app/skills/: app_launcher.py  browser_helper.py  micro_utilities.py
services/agent-runtime/app/tools/: open_app.js  open_app.py  open_url.js  open_url.py
services/agent-runtime/tests/: conftest.py  test_api.py  test_chat_service.py  test_command_router.py  test_installer.py  test_installer_download_regression.py  test_marketplace.py  test_memory_manager.py  test_micro_utilities.py  test_open_app.py  test_personality_packs.py  test_runtime_paths.py  test_stream_integration.py
(+56 files in other folders)
