[tool.poetry]
name = "companion-agent-runtime"
version = "0.1.0"
description = "Agent runtime for Companion OS"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.135.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.28.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.15.8"
mypy = "^1.6.1"
pyinstaller = { version = "^6.16.0", markers = "sys_platform == 'win32' and python_version < '3.15'" }

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.core.masonry.api"
