[package]
name = "companion_desktop"
version = "0.1.0"
description = "Desktop shell for Companion OS"
authors = ["Companion OS contributors"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
